# solidworks-mcp-server

./: .gitignore  LICENSE  PYTHON_SETUP.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
examples/vba-templates/: batch_export.vba  batch_process.vba  common.vba  create_assembly.vba  create_drawing.vba  create_sketch.vba  modify_properties.vba
python/: Makefile  README.md  README_PARALLEL.md  pyproject.toml
python/src/solidworks_mcp_server/: __init__.py
python/src/solidworks_mcp_server/mcp/: __init__.py  server.py
python/src/solidworks_mcp_server/solidworks/: __init__.py  api.py
python/src/solidworks_mcp_server/tools/: __init__.py
python/src/solidworks_mcp_server/vba/: __init__.py  generator.py
python/tests/: test_basic.py
src/: index.test.ts  index.ts
src/adapters/: types.ts
src/prompts/: index.ts
src/resources/: index.ts
src/solidworks/: api.ts
src/tools/: analysis.ts  diagnostics.ts  drawing.ts  export.ts  macro-recording.ts  macro-security.ts  native-macro.ts  sketch.ts  template-manager.ts  title-map.ts  types.ts
src/types/: winax.d.ts
src/utils/: com-boolean.ts  com-lifecycle.ts  config.ts  environment.ts  error-recovery.ts  feature-utils.ts  solidworks-config.ts
tests/: index.test.ts  version.test.ts
tests/adapters/: macro-generator.test.ts  types.test.ts
tests/fixtures/: .gitkeep
tests/helpers/: check-solidworks.ts  solidworks-setup.ts  test-models.ts  test-utils.ts
tests/integration/: README.md  mcp-tools-comprehensive.test.ts  motor-bracket.test.ts
tests/macro/: recorder.test.ts
(+53 files in other folders)
